Adds a check for already saved channels * print error * introduced 1 second delay before to click the like button

--- a/src/popup.html
+++ b/src/popup.html
@@ -25,7 +25,9 @@
         <button id="add-channel" type="submit">Aggiungi</button>
         <button id="clear-channels" type="submit">Pulisci</button>
     </div>
-
+    <div>
+        <p id="error-print"></p>
+    </div>
     <script src="popup.js"></script>
 </body>
 
